// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`supports nested query with compound ids 1`] = `
Object {
  "parent": Object {
    "child": Object {
      "idField1": 1,
      "idField2": 2,
    },
    "idField1": 1,
    "idField2": 2,
  },
}
`;

exports[`supports nested query with one id field 1`] = `
Object {
  "parent": Object {
    "child": Object {
      "idField": 1,
    },
    "idField": 1,
  },
}
`;

exports[`supports nested query without id but compound uniques 1`] = `
Object {
  "parent": Object {
    "child": Object {
      "uniqueField1": 1,
      "uniqueField2": 2,
    },
    "uniqueField1": 1,
    "uniqueField2": 2,
  },
}
`;

exports[`supports nested query without id but multiple uniques 1`] = `
Object {
  "parent": Object {
    "child": Object {
      "uniqueField1": 1,
      "uniqueField2": 2,
    },
    "uniqueField1": 1,
    "uniqueField2": 2,
  },
}
`;

exports[`supports nested query without id but one unique 1`] = `
Object {
  "parent": Object {
    "child": Object {
      "uniqueField": 1,
    },
    "uniqueField": 1,
  },
}
`;
